--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -144,8 +144,8 @@
 
                 </div>
             </div>
-            <div class="d-flex">
-                <div id="header" class="col-lg-8 col-md-8">
+            <div id="header">
+                <div class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -234,7 +234,45 @@
                         </div>
                     </div>
                 </div>
-                <div id="A" class="col-lg-8 col-md-8">
+                <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
+                    <div class="row">
+                        <div class="card shadow" style="background-image: url('../img/bg1.png');">
+                            <div class="card-more">
+                                <p class="border-bottom text-white hyphens-auto">N’<i>A Clínica</i> estão disponíveis
+                                    consultas de diferentes especialidades, tal como variados workshops, para acompanhar
+                                    a sua
+                                    família nas várias etapas da sua vida. Clique em cada um dos ícones seguintes para
+                                    descobrir os nossos serviços.</p>
+                                <div class="d-flex">
+                                    <div class="col-lg-6 col-md-6 ">
+                                        <a class="d-grid text-center justify-content-center" href="../consultas.html">
+                                            <div class="card-icon">
+                                                <img src="../img/icons/Enfermagem.png" style="width: 75px;">
+                                            </div>
+                                            <div class="text-white card-text">
+                                                <button id="con-pre" class="text-white">Consultas</button>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6">
+                                        <a class="d-grid text-center justify-content-center" href="nutricao.html">
+                                            <div class="card-icon">
+                                                <img src="../img/icons/Nutrição-white.png" style="width: 75px;">
+
+                                            </div>
+                                            <div class="text-white card-text ">
+                                                <button id="con" class="text-white">Consulta de Nutrição</button>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="A">
+                <div class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -277,7 +315,45 @@
                         </div>
                     </div>
                 </div>
-                <div id="B" class="col-lg-8 col-md-8" style="display: none;">
+                <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
+                    <div class="row">
+                        <div class="card shadow" style="background-image: url('../img/bg1.png');">
+                            <div class="card-more">
+                                <p class="border-bottom text-white hyphens-auto">N’<i>A Clínica</i> estão disponíveis
+                                    consultas de diferentes especialidades, tal como variados workshops, para acompanhar
+                                    a sua
+                                    família nas várias etapas da sua vida. Clique em cada um dos ícones seguintes para
+                                    descobrir os nossos serviços.</p>
+                                <div class="d-flex">
+                                    <div class="col-lg-6 col-md-6 ">
+                                        <a class="d-grid text-center justify-content-center" href="../consultas.html">
+                                            <div class="card-icon">
+                                                <img src="../img/icons/Enfermagem.png" style="width: 75px;">
+                                            </div>
+                                            <div class="text-white card-text">
+                                                <button id="con-pre" class="text-white">Consultas</button>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6">
+                                        <a class="d-grid text-center justify-content-center" href="nutricao.html">
+                                            <div class="card-icon">
+                                                <img src="../img/icons/Nutrição-white.png" style="width: 75px;">
+
+                                            </div>
+                                            <div class="text-white card-text ">
+                                                <button id="con" class="text-white">Consulta de Nutrição</button>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="B">
+                <div class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -319,7 +395,45 @@
                         </div>
                     </div>
                 </div>
-                <div id="D" class="col-lg-8 col-md-8" style="display: none;">
+                <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
+                    <div class="row">
+                        <div class="card shadow" style="background-image: url('../img/bg1.png');">
+                            <div class="card-more">
+                                <p class="border-bottom text-white hyphens-auto">N’<i>A Clínica</i> estão disponíveis
+                                    consultas de diferentes especialidades, tal como variados workshops, para acompanhar
+                                    a sua
+                                    família nas várias etapas da sua vida. Clique em cada um dos ícones seguintes para
+                                    descobrir os nossos serviços.</p>
+                                <div class="d-flex">
+                                    <div class="col-lg-6 col-md-6 ">
+                                        <a class="d-grid text-center justify-content-center" href="../consultas.html">
+                                            <div class="card-icon">
+                                                <img src="../img/icons/Enfermagem.png" style="width: 75px;">
+                                            </div>
+                                            <div class="text-white card-text">
+                                                <button id="con-pre" class="text-white">Consultas</button>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6">
+                                        <a class="d-grid text-center justify-content-center" href="nutricao.html">
+                                            <div class="card-icon">
+                                                <img src="../img/icons/Nutrição-white.png" style="width: 75px;">
+
+                                            </div>
+                                            <div class="text-white card-text ">
+                                                <button id="con" class="text-white">Consulta de Nutrição</button>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="D" class="col-lg-8 col-md-8">
+                <div class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -358,8 +472,46 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
+                    <div class="row">
+                        <div class="card shadow" style="background-image: url('../img/bg1.png');">
+                            <div class="card-more">
+                                <p class="border-bottom text-white hyphens-auto">N’<i>A Clínica</i> estão disponíveis
+                                    consultas de diferentes especialidades, tal como variados workshops, para acompanhar
+                                    a sua
+                                    família nas várias etapas da sua vida. Clique em cada um dos ícones seguintes para
+                                    descobrir os nossos serviços.</p>
+                                <div class="d-flex">
+                                    <div class="col-lg-6 col-md-6 ">
+                                        <a class="d-grid text-center justify-content-center" href="../consultas.html">
+                                            <div class="card-icon">
+                                                <img src="../img/icons/Enfermagem.png" style="width: 75px;">
+                                            </div>
+                                            <div class="text-white card-text">
+                                                <button id="con-pre" class="text-white">Consultas</button>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6">
+                                        <a class="d-grid text-center justify-content-center" href="nutricao.html">
+                                            <div class="card-icon">
+                                                <img src="../img/icons/Nutrição-white.png" style="width: 75px;">
 
-                <div id="E" class="col-lg-8 col-md-8" style="display: none;">
+                                            </div>
+                                            <div class="text-white card-text ">
+                                                <button id="con" class="text-white">Consulta de Nutrição</button>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="E">
+                <div class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -468,7 +620,7 @@
         // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
         function showA() {
             header.classList.add("d-none");
-            ADiv.style.display = 'block'; // Exibe a div Cirurgia
+            ADiv.classList.add('displayidr') // Exibe a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div pós-parto
             DDiv.style.display = 'none';  // Esconde a div pós-parto
             EDiv.style.display = 'none';  // Esconde a div pós-parto
@@ -485,7 +637,7 @@
         function showB() {
             header.classList.add("d-none");
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
-            BDiv.style.display = 'block'; // Exibe a div pós-parto
+            BDiv.classList.add('displayidr') // Exibe a div pós-parto
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
             img.src = '../img/blog/details/nutrio-infant.jpg'; // Atualiza o texto para "Cirurgia"
@@ -502,7 +654,7 @@
             header.classList.add("d-none");
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
-            DDiv.style.display = 'block'; // Exibe a div pós-parto
+            DDiv.classList.add('displayidr') // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
             img.src = "../img/blog/details/Pré-conceção.jpg"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Consulta de Pré-conceção"; // Atualiza o texto para "Pós-parto"
@@ -518,7 +670,7 @@
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'none'; // Exibe a div pós-parto
-            EDiv.style.display = 'block'; // Exibe a div pós-parto
+            EDiv.classList.add('displayidr') // Exibe a div pós-parto
             img.src = "../img/blog/details/diabetes.jpg"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Consulta de Pré-natal"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
