--- a/about.html
+++ b/about.html
@@ -25,6 +25,13 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
     <style>
+        @media all and (max-width:992px) {
+            .consultation__video {
+                height: 200px !important;
+                width: 369px !important;
+            }
+        }
+
         b {
             color: #d6a294;
             font-weight: 400;
@@ -173,7 +180,7 @@
                         </div>
                     </div>
                     <!-- Hero Section Begin -->
-                    <section class="hero spad set-bg mt-4" data-setbg="img/hero-2bg.jpg">
+                    <section class="hero about_hero spad set-bg mt-4" data-setbg="img/hero-2bg.jpg">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 mt-2 ml-4">
@@ -194,7 +201,7 @@
 
 
     <!-- Hero Section Begin -->
-    <section class="hero set-bg mt-8" data-setbg="img/blog/details/blog-hero11.jpg" style='background-image: url("img/blog/details/blog-hero.jpg"); color: ffff;
+    <section class=" destaque set-bg mt-8" data-setbg="img/blog/details/blog-hero11.jpg" style='background-image: url("img/blog/details/blog-hero.jpg"); color: ffff;
         height: 32rem;'>
         <div class="container">
             <div class="row">
@@ -232,7 +239,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 d-flex justify-content-center">
-                    <a href="video/a9b14eab-834f-4e54-b669-3999e49f2d60.mp4" class="play-btn video-popup align-content-center">
+                    <a href="video/a9b14eab-834f-4e54-b669-3999e49f2d60.mp4"
+                        class="play-btn video-popup align-content-center">
                         <div class="consultation__video set-bg" data-setbg="video/video-cover.jpg">
                             <i class="fa fa-play"></i>
                         </div>
