--- a/pages/curso-amamentacao-grupo.html
+++ b/pages/curso-amamentacao-grupo.html
@@ -180,7 +180,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="consultation__video set-bg" data-setbg="../img/bg0.png"
-                                    style="background-image: url('../img/bg0.png'); height: 25rem; border-radius: 10px;">
+                                    style="background-image: url('../img/bg0.png');height: fit-content;border-radius: 10px;padding: 20px;">
 
                                     <div class="col-lg-10">
                                         <div class="row">
