--- a/pages/curso-prep-grupo.html
+++ b/pages/curso-prep-grupo.html
@@ -175,8 +175,8 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
-                                <div class="consultation__video set-bg"
-                                    style="background-color: #dfb080; height: 23rem; border-radius: 10px;">
+                                <div class=" set-bg"
+                                    style="background-color: #dfb080;height: fit-content;border-radius: 10px;padding: 20px;">
 
                                     <div class="col-lg-10">
                                         <div class="row">
