--- a/pages/curso-prep-indiv.html
+++ b/pages/curso-prep-indiv.html
@@ -38,7 +38,7 @@
             border-radius: 5px;
             line-height: 2.1;
             color: white !important;
-            height: 19rem;
+            height: fit-content;
         }
     </style>
     <script>
@@ -194,8 +194,8 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
-                                <div class="consultation__video set-bg" data-setbg="../img/bg4.png"
-                                    style="background-image: url('../img/bg4.png'); height: 41rem; border-radius: 10px;">
+                                <div class=" set-bg" data-setbg="../img/bg4.png"
+                                    style="background-image: url('../img/bg4.png');height: fit-content;border-radius: 10px;padding: 20px;">
 
                                     <div class="col-lg-10">
                                         <div class="row">
