--- a/pages/enfermagem.html
+++ b/pages/enfermagem.html
@@ -26,6 +26,21 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css">
 
     <style>
+        /* Exibe o menu offcanvas apenas em telas menores (máx. 768px) */
+        @media (max-width: 768px) {
+            .services__details__pic {
+                background-image: url(../img/blog/details/blog-hero6.jpg);
+                background-size: cover;
+                background-position: left;
+                background-repeat: no-repeat;
+                background-position-x: -86px;
+            }
+
+            .services__details__pic img {
+                display: none;
+            }
+        }
+
         b {
             color: #d6a294;
             font-weight: 400;
@@ -271,7 +286,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="anel" style="display: none;">
+                <div id="anel">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
                             <div class="blog__details__text ml-4 mr-4">
@@ -367,7 +382,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="sutura-ferida" style="display: none;">
+                <div id="sutura-ferida">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
                             <div class="blog__details__text ml-4 mr-4">
@@ -470,7 +485,7 @@
 
         // Função para exibir a consulta Cirurgia
         function showCirurgia() {
-            CirurgiaDiv.style.display = 'flex';
+            CirurgiaDiv.classList.add('displayidr');
             anelDiv.style.display = 'none';
             suturaDiv.style.display = 'none';
             subtitulo.textContent = "O cuidado do seu recém-nascido na comodidade da sua casa.";
@@ -485,7 +500,7 @@
 
         // Função para exibir a consulta Anel
         function showAnel() {
-            anelDiv.style.display = 'flex';
+            anelDiv.classList.add('displayidr');
             suturaDiv.style.display = 'none';
             CirurgiaDiv.style.display = 'none';
             subtitulo.textContent = "Cuidar dos pacientes com amor é o que distingue a nossa equipa de Enfermagem!";
@@ -500,7 +515,7 @@
 
         // Função para exibir a consulta Sutura
         function showSutura() {
-            suturaDiv.style.display = 'flex';
+            suturaDiv.classList.add('displayidr');
             anelDiv.style.display = 'none';
             CirurgiaDiv.style.display = 'none';
             subtitulo.textContent = "Quando precisar de uma mudança de penso, pode fazê-lo n’A Clínica.";
