--- a/pages/gravidez.html
+++ b/pages/gravidez.html
@@ -138,7 +138,7 @@
 
                 </div>
             </div>
-            <div class="d-flex">
+            <div class="flexivel">
                 <div id="header" class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
@@ -265,7 +265,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="B" class="col-lg-8 col-md-8" style="display: none;">
+                <div id="B" class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -300,7 +300,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="D" class="col-lg-8 col-md-8" style="display: none;">
+                <div id="D" class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -361,7 +361,7 @@
                     </div>
                 </div>
 
-                <div id="E" class="col-lg-8 col-md-8" style="display: none;">
+                <div id="E" class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
@@ -447,7 +447,7 @@
         function showA() {
             window.scrollTo({ top: 0, behavior: 'smooth' });
             header.classList.add("d-none");
-            ADiv.style.display = 'block'; // Exibe a div Cirurgia
+            ADiv.classList.add('displayidr'); // Exibe a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div pós-parto
             DDiv.style.display = 'none';  // Esconde a div pós-parto
             EDiv.style.display = 'none';  // Esconde a div pós-parto
@@ -465,7 +465,7 @@
             window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
             header.classList.add("d-none");
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
-            BDiv.style.display = 'block'; // Exibe a div pós-parto
+            BDiv.classList.add('displayidr'); // Exibe a div pós-parto
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
             img.style.backgroundImage = "url('../img/blog/details/Snoezelen.jpg')"; // Atualiza o texto para "Cirurgia"
@@ -482,7 +482,7 @@
             header.classList.add("d-none");
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
-            DDiv.style.display = 'block'; // Exibe a div pós-parto
+            DDiv.classList.add('displayidr'); // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
             img.style.backgroundImage = "url('../img/blog/details/Pré-conceção.jpg')"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Consulta de Pré-conceção"; // Atualiza o texto para "Pós-parto"
@@ -498,7 +498,7 @@
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'none'; // Exibe a div pós-parto
-            EDiv.style.display = 'block'; // Exibe a div pós-parto
+            EDiv.classList.add('displayidr'); // Exibe a div pós-parto
             img.style.backgroundImage = "url('../img/blog/details/diabetes.jpg')"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Exercício Físico durante a gravidez"; // Atualiza o texto para "Pós-parto"
             subtitulo.textContent = "O exercício durante a gravidez é fundamental para a saúde materna e do bebé."; // Atualiza o texto para "Pós-parto"
